feat(auth): implement ui for sign in page

--- a/app/globals.css
+++ b/app/globals.css
@@ -122,6 +122,6 @@
     scroll-behavior: smooth !important;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground overflow-x-hidden;
   }
 }
